@@ -70,6 +70,6 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "0.17",
+   "version" : "0.18",
    "x_serialization_backend" : "JSON::PP version 2.27300_01"
 }
